--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hello Jesus I love YOU!!
-    <script src="./scripts/index.js></script>"
+<script src="app.js"></script>
 </body>
 </html>
